# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.439 2007-08-06 14:28:02 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.3 (2007/??/??)
 - (2007/08/06) Fixed bug# 2142 - If a service or a sla of a ticket was changed,
    no ticket history entry was added.
 - (2007/08/06) Fixed bug# 2135 - scripts/DBUpdate-to-2.2.2.sql contains wrong
    SQL. Not the queue table needs to be changed, the ticket table would be the
    right one.
 - (2007/08/03) Fixed bug# 2134 - PDF print is creating damaged pdf files with
    PDF::API2 0.56 or smaller.
 - (2007/08/02) Fixed bug# 940 - After owners unlock ticket and a follow-up
    arrives the system, all agents which selected the queue of this ticket get
    and follow up message. In this follow up message the name was always the
    current owner and not the recipient of the email (which should be).
 - (2007/07/31) Fixed bug# 2001 - New escalation times and the responsible are
    not shown in any print views.

2.2.2 (2007/07/31)
 - (2007/07/31) Fixed bug# 2114 - Fixed the problems with the email object.
 - (2007/07/30) Fixed bug# 2015 - Improved handling to allocate customerusers
    and services. Now it's possible to define default services.
 - (2007/07/27) Fixed bug# 2053 - If core "System::Permission" note is used,
    not effect to the ticket note mask appears.
 - (2007/07/27) Fixed bug# 2059 - config setting $Self->{'Database::Connect'}
    is not overwriting default option used by driver.
 - (2007/07/26) Fixed bug# 2105 - Notification after moving a ticket to my
    queues is wrong -> ">OTRS_CUSTOMER_QUEUE<" got not replaced in subject.
    SQL files scripts/database/otrs-initial_insert.*.sql got fixed.
 - (2007/07/26) Fixed bug# 2029 - Selected responsible agent was not taken