@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketPriority.pm - set ticket priority
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: AgentTicketPriority.pm,v 1.24 2007-06-18 09:33:57 martin Exp $
+# $Id: AgentTicketPriority.pm,v 1.25 2007-08-06 15:49:28 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -16,7 +16,7 @@ use Kernel::System::State;
 use Kernel::System::Web::UploadCache;
 
 use vars qw($VERSION);
-$VERSION = '$Revision: 1.24 $';
+$VERSION = '$Revision: 1.25 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 sub new {
@@ -346,6 +346,7 @@ sub Run {
                 $Self->{TicketObject}->TicketServiceSet(
                     ServiceID => $GetParam{ServiceID},
                     TicketID => $Self->{TicketID},
+                    CustomerUserID => $Ticket{CustomerUserID},
                     UserID => $Self->{UserID},
                 );
             }
@@ -664,7 +665,6 @@ sub _Mask {
             Data => \%Type,
             Name => 'TypeID',
             SelectedID => $Param{TypeID},
-            PossibleNone => 1,
             Sort => 'AlphanumericValue',
             Translation => 0,
             OnChange => "document.compose.Expand.value='3'; document.compose.submit(); return false;",
